<resources>
    <string name="app_name">Group30_Inclass04</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="welcome">Welcome!!</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="register_account">Register Account</string>
    <string name="account">Account</string>
    <string name="update_account">Update Account</string>
</resources>